--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,10 @@
 <resources>
     <color name="royal_blue_dark">#002657</color>
     <color name="dark_blue">#00193B</color>
-    <color name="green">#2ECC71</color>
-    <color name="red">#E74C3C</color>
+    <color name="dark_purple">#7E57C2</color>
+    <color name="purple">#9C27B0</color>
+    <color name="green">#4FC281</color>
+    <color name="red">#D6455D</color>
     <color name="black">#FF000000</color>
     <color name="white">#ECF0F1</color>
 </resources>
