--- a/app/src/main/res/layout/top_currency_layout.xml
+++ b/app/src/main/res/layout/top_currency_layout.xml
@@ -8,6 +8,7 @@
     </data>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/topCurrencyCardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
