--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="royal_blue_dark">#002657</color>
+    <color name="royal_blue_dark">#022F6B</color>
     <color name="dark_blue">#00193B</color>
     <color name="dark_purple">#7E57C2</color>
     <color name="purple">#9C27B0</color>
