--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,8 +53,11 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            app:menu="@menu/bottom_nav_menu"
-            android:fitsSystemWindows="true"/>
+            android:background="@color/royal_blue_dark"
+            android:fitsSystemWindows="true"
+            app:itemIconTint="@color/white"
+            app:itemTextColor="@color/white"
+            app:menu="@menu/bottom_nav_menu" />
 
     </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
