--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="royal_blue_dark">#022F6B</color>
-    <color name="dark_blue">#00193B</color>
-    <color name="dark_purple">#7E57C2</color>
+    <color name="dark_blue">#031B3B</color>
+    <color name="dark_purple">#473080</color>
     <color name="purple">#9C27B0</color>
     <color name="green">#4FC281</color>
     <color name="red">#D6455D</color>
