--- a/app/src/main/res/layout/fragment_watchlist.xml
+++ b/app/src/main/res/layout/fragment_watchlist.xml
@@ -8,61 +8,43 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/marketFragment"
+        android:id="@+id/watchListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/royal_blue_dark"
-        tools:context=".ui.Fragments.MarketFragment">
+        tools:context=".ui.Fragments.WatchlistFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout4"
+            android:id="@+id/constraintLayout5"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="52dp"
             android:background="@drawable/market_content_bg"
-            android:elevation="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <EditText
-                android:id="@+id/searchEditText"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/search_field_bg"
-                android:ems="10"
-                android:hint="@string/search_hint"
-                android:inputType="text"
-                android:paddingStart="20dp"
-                android:paddingTop="12dp"
-                android:paddingBottom="12dp"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/currencyRecyclerView"
+                android:id="@+id/watchlistRecyclerView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="12dp"
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/searchEditText" />
+                app:layout_constraintTop_toTopOf="parent">
+
+            </androidx.recyclerview.widget.RecyclerView>
 
             <TextView
-                android:id="@+id/notFoundTextView"
+                android:id="@+id/emptyTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/not_found"
+                android:text="@string/empty_watchlist"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:visibility="gone"
